--- a/style.css
+++ b/style.css
@@ -1,224 +1,239 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap");
 
 *,
 *::before,
 *::after {
-    font: 62.5% 'Work Sans', sans-serif;
-    font-family: 'Work Sans', sans-serif;
-    transition: color 800ms;
-    transition: background 800ms;
-    box-sizing: border-box;
+  font: 62.5% "Work Sans", sans-serif;
+  font-family: "Work Sans", sans-serif;
+  transition: color 800ms;
+  transition: background 800ms;
+  box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 html {
-    background-color: var(--background-color);
+  background-color: var(--background-color);
 }
 
 body {
-    margin: 0;
-    padding: 0 16px;
+  margin: 0;
+  padding: 0 16px;
 }
 
 .style_wrapper {
-    max-width: 990px;
-    margin: auto;
+  max-width: 990px;
+  margin: auto;
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 24px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 24px 0px;
 }
 
 h1 {
-    font-size: 4rem;
-    margin: 0;
-    color: var(--heading_1_color);
+  font-size: 4rem;
+  margin: 0;
+  color: var(--heading_1_color);
 }
 
 .hero_text_p {
-    line-height: 160%;
-    margin: 24px 0 32px;
-    color: var(--text-color)
+  line-height: 160%;
+  margin: 24px 0 32px;
+  color: var(--text-color);
 }
 
 p {
-    font-size: 1.6rem;
-    margin: 0;
+  font-size: 1.6rem;
+  margin: 0;
 }
 
 .external_link {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 16px;
-    row-gap: 6px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  row-gap: 6px;
 }
 
 .external_link a {
-    font-size: 1.4rem;
-    padding: 6px 0;
+  font-size: 1.4rem;
+  padding: 6px 0;
 }
 
 a {
-    text-decoration: none;
-    font-size: 1.6rem;
-    color: #111;
-
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #111;
 }
 
 a img {
-    width: 32px;
-    margin-left: 8px;
+  width: 32px;
+  margin-left: 8px;
 }
 
 .lang {
-    font-size: 1.6rem;
-    color: var(--link-color);
+  font-size: 1.6rem;
+  color: var(--link-color);
 }
 
 .link {
-    color: var(--link-color);
+  color: var(--link-color);
 }
 
 .hero {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    margin: 48px 0;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  margin: 48px 0;
 }
 
 .site_logo {
-    font-size: 2rem;
-    color: var(--heading_1_color);
-    font-weight: 500;
+  font-size: 2rem;
+  color: var(--heading_1_color);
+  font-weight: 500;
 }
 
 .hero_text {
-    width: 100%;
-    max-width: 456px;
-    margin: 0 24px 0 0;
+  width: 100%;
+  max-width: 456px;
+  margin: 0 24px 0 0;
 }
 
 .hero_image {
-    width: -webkit-fill-available;
-    height: 456px;
+  width: -webkit-fill-available;
+  height: 456px;
 }
 
 .hero_image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .hero_text a {
-    display: flex;
-    align-items: center;
-
+  display: flex;
+  align-items: center;
 }
 
 a svg {
-    width: 20px;
-    fill: #ccc;
-    margin-right: 4px;
+  width: 20px;
+  fill: #ccc;
+  margin-right: 4px;
 }
 
 .w-6 {
-    stroke: #ccc;
-    fill: none;
+  stroke: #ccc;
+  fill: none;
 }
 
 .logo {
-    padding: 8px 0;
+  padding: 8px 0;
+  border: none;
+  background: none;
 }
 
 #theme {
-    display: none;
+  display: none;
 }
 
 .sun,
 .moon {
-    fill: var(--mode-color);
-    width: 24px;
-    stroke: none;
-    cursor: pointer;
+  fill: var(--mode-color);
+  width: 24px;
+  stroke: none;
+  cursor: pointer;
 }
 
 .sun {
-    display: var(--sun);
+  display: var(--sun);
 }
 
 .moon {
-    display: var(--moon);
+  display: var(--moon);
 }
 
-@media screen and (max-width:620px) {
-    .hero {
-        flex-direction: column-reverse;
-    }
+@media screen and (max-width: 620px) {
+  .hero {
+    flex-direction: column-reverse;
+  }
 
-    h1 {
-        font-size: 3.6rem;
-    }
+  h1 {
+    font-size: 3.6rem;
+  }
 
-    .hero_text {
-        max-width: none;
-        margin: 40px 0 0 0;
-    }
-
+  .hero_text {
+    max-width: none;
+    margin: 40px 0 0 0;
+  }
 }
 
 [data-theme="dark"] {
-    --sun: block;
-    --moon: none;
-    --mode-color: #eee;
-    --background-color: #121212;
-    --text-color: #d7d7d7;
-    --link-color: #d7d7d7;
-    --heading_1_color: #f2f2f2;
+  --sun: block;
+  --moon: none;
+  --mode-color: #eee;
+  --background-color: #121212;
+  --text-color: #d7d7d7;
+  --link-color: #d7d7d7;
+  --heading_1_color: #f2f2f2;
+  --cursor-color: #ebadca;
 }
 
 [data-theme="light"] {
-    --sun: none;
-    --moon: block;
-    --heading_1_color: #121112;
-    --text-color: #333;
-    --link-color: #333;
-    --mode-color: #121212;
+  --sun: none;
+  --moon: block;
+  --heading_1_color: #121112;
+  --text-color: #333;
+  --link-color: #333;
+  --mode-color: #121212;
+  --cursor-color: #fdc2de;
 }
 
 @media screen and (min-width: 1920px) {
-    .style_wrapper {
-        max-width: 1440px;
-    }
-    .hero_image {
-        height: 600px;
-        width: 800px;
-    }
-    .hero_text {
-        max-width: 620px;
-    }
-    h1 {
-        font-size: 5.6rem;
-    }
-    .hero_text_p, .external_link a {
-        font-size: 2.4rem;
-    }
-    .external_link a svg {
-        width: 24px;
-    }
-    a svg {
-        margin-right: 10px;
-    }
-    .moon, .sun {
-        width: 32px;
-    }
-    .site_logo {
-        font-size: 3.2rem;
-    }
+  .style_wrapper {
+    max-width: 1440px;
+  }
+  .hero_image {
+    height: 600px;
+    width: 800px;
+  }
+  .hero_text {
+    max-width: 620px;
+  }
+  h1 {
+    font-size: 5.6rem;
+  }
+  .hero_text_p,
+  .external_link a {
+    font-size: 2.4rem;
+  }
+  .external_link a svg {
+    width: 24px;
+  }
+  a svg {
+    margin-right: 10px;
+  }
+  .moon,
+  .sun {
+    width: 32px;
+  }
+  .site_logo {
+    font-size: 3.2rem;
+  }
+}
+
+.cursor {
+  position: absolute;
+  top: -24px;
+  left: -24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 24px;
+  background-color: var(--cursor-color);
+  transition: all 300ms ease-out, transform 300ms ease-out 500ms;
+  pointer-events: none;
 }
