--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ a svg {
     max-width: none;
     margin: 40px 0 0 0;
   }
+
+  .cursor {
+    display: none;
+  }
 }
 
 [data-theme="dark"] {
@@ -198,30 +202,38 @@ a svg {
   .style_wrapper {
     max-width: 1440px;
   }
+
   .hero_image {
     height: 600px;
     width: 800px;
   }
+
   .hero_text {
     max-width: 620px;
   }
+
   h1 {
     font-size: 5.6rem;
   }
+
   .hero_text_p,
   .external_link a {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
   }
+
   .external_link a svg {
     width: 24px;
   }
+
   a svg {
     margin-right: 10px;
   }
+
   .moon,
   .sun {
     width: 32px;
   }
+
   .site_logo {
     font-size: 3.2rem;
   }
